fixed word wrapping on entire site

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -75,7 +75,6 @@
 
 
 #sidebar .info-card {
-    word-wrap: break-word;
     margin-bottom: 1em;
     padding: 1em 1em;
     background-color: #d6dfd9;
