--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,7 @@
 * {
     /*border: 1px solid red;*/
     font-family: Times;
+    overflow-wrap: break-word;
 }
 
 .navbar {
